--- a/client/src/components/PostList/styles.css
+++ b/client/src/components/PostList/styles.css
@@ -15,3 +15,11 @@
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
+.postControls {
+    margin: 10px 0 10px 0;
+}
+
+.postControls {
+    margin-left: 10px;
+}
