--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,5 @@
 .App-header {
-  background-color: #c93c67;
+  background-color: #00b6a7;
   min-height: 10vh;
   display: flex;
   flex-direction: column;
@@ -21,7 +21,7 @@ nav {
   display: flex;
   justify-content: flex-start;
   padding: 10px;
-  background-color: #b8355c;
+  background-color: #093aa3;
 }
 
 nav a {
@@ -35,11 +35,11 @@ button {
   font-size: 0.8em;
   font-weight: 700;
   color: #ffffff;
-  background-color: #b8355c;
-  border-color: #c93c67;
+  background-color: #00b6a7;
+  border-color: #093aa3;
 }
 
 button:hover {
   cursor: pointer;
-  background-color: #c93c67;
+  background-color: #093aa3;
 }
